Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37056

SIGSEGV in wsrep_check_sequence | mysql_alter_table

    XMLWordPrintable

Details

    • Can result in hang or crash
    • Q4/2025 Galera Development

    Description

      --source include/galera_cluster.inc
       
      --connection node_1
      SET SESSION wsrep_on=OFF;
      SET default_storage_engine=MYISAM;
      CREATE SEQUENCE t;
      SET SESSION wsrep_on=ON;
      CREATE INDEX idx ON t (a);
      
      

      Leads to:

      CS 12.1.0 2ee2e2d0f3d3dbfafebdb75ee7bc2914b97e9065 (Optimized) Build 20/06/2025

      Core was generated by `/test/GAL_MD200625-mariadb-12.1.0-linux-x86_64-opt/bin/mariadbd --defaults-file'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  __pthread_kill_implementation (no_tid=0, signo=11, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
       
      [Current thread is 1 (LWP 4029618)]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=11, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=11, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=11)at ./nptl/pthread_kill.c:89
      #3  0x000055d5f3182498 in handle_fatal_signal (sig=11)at /test/12.1_opt/sql/signal_handler.cc:298
      #4  <signal handler called>
      #5  0x000055d5f2fb55c0 in wsrep_check_sequence (thd=thd@entry=0x7eff040171a8, seq=0x0, used_engine=used_engine@entry=false)at /test/12.1_opt/sql/sql_table.cc:5088
      #6  0x000055d5f2fc1ab4 in mysql_alter_table (thd=thd@entry=0x7eff040171a8, new_db=new_db@entry=0x7eff04008a70, new_name=new_name@entry=0x7eff04008a80, create_info=create_info@entry=0x7f21c8801e40, table_list=<optimized out>, table_list@entry=0x7eff04008a58, recreate_info=recreate_info@entry=0x7f21c88020c0, alter_info=0x7f21c8801cc0, order_num=0, order=0x0, ignore=false, if_exists=false) at /test/12.1_opt/sql/sql_table.cc:10839
      #7  0x000055d5f2ef3641 in mysql_execute_command (thd=thd@entry=0x7eff040171a8, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false)at /test/12.1_opt/sql/sql_parse.cc:4219
      #8  0x000055d5f2ef6e73 in mysql_parse (rawbuf=<optimized out>, length=<optimized out>, parser_state=<optimized out>, thd=0x7eff040171a8)at /test/12.1_opt/sql/sql_parse.cc:7882
      #9  mysql_parse (thd=0x7eff040171a8, rawbuf=<optimized out>, length=<optimized out>, parser_state=<optimized out>)at /test/12.1_opt/sql/sql_parse.cc:7804
      #10 0x000055d5f2ef7583 in wsrep_mysql_parse (thd=0x7eff040171a8, rawbuf=0x7eff04008970 "CREATE INDEX i0 ON t (a)", length=24, parser_state=0x7f21c8802370) at /test/12.1_opt/sql/sql_parse.cc:7692
      #11 0x000055d5f2ef9925 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7eff040171a8, packet=packet@entry=0x7eff040008f9 "CREATE INDEX i0 ON t (a)", packet_length=packet_length@entry=24, blocking=blocking@entry=true)at /test/12.1_opt/sql/sql_parse.cc:1962
      #12 0x000055d5f2efa855 in do_command (thd=thd@entry=0x7eff040171a8, blocking=blocking@entry=true) at /test/12.1_opt/sql/sql_parse.cc:1416
      #13 0x000055d5f302bf0d in do_handle_one_connection (connect=<optimized out>, put_in_cache=true) at /test/12.1_opt/sql/sql_connect.cc:1414
      #14 0x000055d5f302c1f5 in handle_one_connection (arg=0x55d5f8c153d8)at /test/12.1_opt/sql/sql_connect.cc:1326
      #15 0x00007f25abc9caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #16 0x00007f25abd29c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      Galera Bug Detection Matrix

          Rel    o/d  Build   Commit                                    UniqueID observed             
      CS  10.6   dbg  200625  cda1826201cadd8f0d3a2bcbdbfd1ed7118de4b5  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  10.6   opt  200625  cda1826201cadd8f0d3a2bcbdbfd1ed7118de4b5  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  10.11  dbg  200625  ec495bffe99d82335e440c7c8ae8f5a804a9b526  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  10.11  opt  200625  ec495bffe99d82335e440c7c8ae8f5a804a9b526  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  11.4   opt  200625  e63e0e4c6f164adba477512eb8f1e16abb4182e1  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse  
      CS  11.4   dbg  200625  e63e0e4c6f164adba477512eb8f1e16abb4182e1  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse                                  
      CS  11.8   dbg  030625  7dcdb2c876e47d0967da571e5451e0e9d5d57faa  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  11.8   opt  030625  7dcdb2c876e47d0967da571e5451e0e9d5d57faa  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  12.0   dbg  200625  dfcb5c91e013c46e777916f2bbf43273a676f6a4  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  12.0   opt  200625  dfcb5c91e013c46e777916f2bbf43273a676f6a4  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  12.1   dbg  200625  2ee2e2d0f3d3dbfafebdb75ee7bc2914b97e9065  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      CS  12.1   opt  200625  2ee2e2d0f3d3dbfafebdb75ee7bc2914b97e9065  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      ES  10.5   dbg  060525  0d368ec0042a81d9549fc939fb742f82350b20ab  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      ES  10.5   opt  060525  0d368ec0042a81d9549fc939fb742f82350b20ab  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      ES  10.6   dbg  060525  6111fbaf7bdcb6f1170f556ffd05d6e1a4159f62  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      ES  10.6   opt  060525  6111fbaf7bdcb6f1170f556ffd05d6e1a4159f62  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      ES  11.4   dbg  060525  9cd12544ebfd0d52d2158af66b5aced58121cf1f  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      ES  11.4   opt  060525  9cd12544ebfd0d52d2158af66b5aced58121cf1f  SIGSEGV|wsrep_check_sequence|mysql_alter_table|mysql_execute_command|mysql_parse
      

      Attachments

        Activity

          People

            janlindstrom Jan Lindström
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1d
                1d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2h 50m Time Not Required
                2h 50m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.